# dirt

./: Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
src/: convert.rs  dname.rs  header.rs  lib.rs  main.rs  message.rs  packet.rs  qclass.rs  qtype.rs  query.rs  question.rs  read_util.rs  record.rs  types.rs
src/convert/: dname.rs  header.rs  label.rs  message.rs  question.rs  record.rs
src/types/: dname.rs  header.rs  message.rs  query.rs  question.rs  record.rs
