[package]
name = "dirt"
description = "DNS Information Resolving Tool"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.3.9", features = ["derive"] }
num_enum = "0.6.1"
rand = "0.8.5"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
