[package]
name = "dirt"
description = "DNS Information Resolving Tool"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
num_enum = "0.7.1"
rand = "0.9"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
